# docker_habit_cw8

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
main/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
